tests/bad/const_expr_var.ae
/// fail: Cannot use a non-constant value in a constant expression

let x = 0
const y = x + 1

def main() {
    y = 5
}